[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/MapNode.gd" id="1_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_click"]
radius = 28.0

[node name="MapNode" type="Node2D"]
script = ExtResource("1_script")

[node name="FrameSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)

[node name="IconSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_click")

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = -32.0
offset_top = 24.0
offset_right = 32.0
offset_bottom = 48.0
horizontal_alignment = 1
vertical_alignment = 1
